adição de alguns links na pagina

--- a/index.html
+++ b/index.html
@@ -15,9 +15,68 @@
     <!--fontes_crimson text e Work Sans-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Crimson+Text:wght@400;700&family=Work+Sans:wght@300&display=swap" rel="stylesheet">    
+    <link href="https://fonts.googleapis.com/css2?family=Crimson+Text:wght@400;700&family=Work+Sans:wght@300;400&display=swap" rel="stylesheet">
 </head>
 <body>
-    <p>Em construção</p>
+    <h1>Ferramentas organizadas para Web Design</h1>
+    <h2>Pesquisa e Consultas:</h2>
+    <ul>
+        <li><a href="https://www.w3schools.com" target="_blank">W3Schools</a></li>
+    </ul>
+    <h2>Ferramentas</h2>
+    <h3>Repositórios:</h3>
+    <ul>
+        <li><a href="https://github.com/" target="_blank">GitHub</a></li>
+    </ul>
+    <h3>Conversão de CSS para adaptação em vários navegadores:</h3>
+    <ul>
+        <li><a href="https://autoprefixer.github.io/" target="_blank">Autoprefixer CSS online</a></li>
+    </ul>
+    <h3>Ferramentas diversas:</h3>
+    <ul>
+        <li><a href="https://www.4devs.com.br" target="_blank">4Devs</a></li>
+        <li><a href="https://undesign.learn.uno/" target="_blank">Undesign - Coleção de ferramentas de todos os tipos</a></li>
+        <li><a href="https://logoipsum.com/]" target="_blank">Gerador de Logos</a></li>
+    </ul>
+    <h2>Fontes:</h2>
+    <ul>
+        <li><a href="https://fonts.google.com/" target="_blank">Google Fonts</a></li>
+        <li><a href="https://artisanthemes.io/best-google-fonts-combinations-modern-agency-website/" target="_blank">Artisan Themes</a></li>
+        <li><a href="https://heyreliable.com/ultimate-google-font-pairings/" target="_blank">Reliable - Collection of Google Font Pairings</a></li>
+        <li><a href="https://www.garett.co/21-google-fonts-combinations-for-websites-brands" target="_blank">Garett - Google Fonts Combinarions</a></li>
+        <li><a href="https://www.pagecloud.com/blog/best-google-fonts-pairings" target="_blank">PageCloud - Top 50 Google Fonts Pairings</a></li>
+    </ul>
+    <h2>Cores:</h2>
+    <ul>
+        <li><a href="https://99designs.com.br/blog/tips/website-color-schemes/" target="_blank">11 Color Schemes</a></li>
+        <li><a href="https://visme.co/blog/website-color-schemes/" target="_blank">50 Color Schemes</a></li>
+        <li><a href="https://coolors.co/" target="_blank">Gerador de paletas</a></li>
+    </ul>
+    <h2>Ícones:</h2>
+    <ul>
+        <li><a href="https://icon-icons.com/pt/" target="_blank">Milhares de icones gratuitos SVG, PNG, ICO</a></li>
+    </ul>
+    <h2>Animações:</h2>
+    <ul>
+        <li><a href="https://animista.net/" target="_blank">Criar animações</a></li>
+    </ul>
+    <h2>Background</h2>
+    <ul>
+        <li><a href="https://bgjar.com/" target="_blank">Criar backgrounds rapidamente</a></li>
+    </ul>
+    <h2>Sombras:</h2>
+    <ul>
+        <li><a href="https://neumorphism.io/#e0e0e0" target="_blank">Criar e trabalhar com sombras</a></li>
+    </ul>
+    <h2>Botões:</h2>
+    <ul>
+        <li><a href="https://css3buttongenerator.com/index.html" target="_blank">Gerar botões com facilidade</a></li>
+    </ul>
+    <h2>Leia-me</h2>
+    <ul>
+        <li><a href="https://readme.so/pt" target="_blank">Criar um arquivo README.md com facilidade</a></li>
+    </ul>
+    <h2>Exercícios:</h2>
+    <ul><li><a href="https://www.frontendmentor.io/home" target="_blank">Frontend Mentor</a></li></ul>
 </body>
 </html>
