--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <h2>Ferramentas</h2>
     <h3>Repositórios:</h3>
     <ul>
-        <li><a href="https://github.com/" target="_blank">GitHub</a></li>
+        <li><a href="https://github.com/wd-gabrielfsfilho?tab=repositories" target="_blank">GitHub</a></li>
     </ul>
     <h3>Conversão de CSS para adaptação em vários navegadores:</h3>
     <ul>
