Adição do link para geração de codigo QR

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
         <li><a href="https://www.4devs.com.br" target="_blank">4Devs</a></li>
         <li><a href="https://undesign.learn.uno/" target="_blank">Undesign - Coleção de ferramentas de todos os tipos</a></li>
         <li><a href="https://logoipsum.com/]" target="_blank">Gerador de Logos</a></li>
+        <li><a href="https://www.qrcode-monkey.com/pt/">Gerar código QR</a></li>
     </ul>
     <h2>Fontes:</h2>
     <ul>
