adição do icone da pagina

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <meta name="keywords" content="HTML5, CSS3, Links auxiliares">
     <meta name="autor" content="Gabriel F. S. Filho, Gabriel Fernandes Seguro Filho">
 
+    <link rel="icon" type="image/png" sizes="32x32" href="./favicon-32x32.png">
+
     <title>Controle de Links Auxiliares</title>
 
     <!--estilo-->
