Novas adições de links

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 </head>
 <body>
     <h1>Ferramentas organizadas para Web Design</h1>
+    <br>
     <h2>Pesquisa e Consultas:</h2>
     <ul>
         <li><a href="https://www.w3schools.com" target="_blank">W3Schools</a></li>
@@ -38,8 +39,16 @@
     <ul>
         <li><a href="https://www.4devs.com.br" target="_blank">4Devs</a></li>
         <li><a href="https://undesign.learn.uno/" target="_blank">Undesign - Coleção de ferramentas de todos os tipos</a></li>
-        <li><a href="https://logoipsum.com/]" target="_blank">Gerador de Logos</a></li>
+        <li><a href="https://logoipsum.com/" target="_blank">Gerador de Logos</a></li>
         <li><a href="https://www.qrcode-monkey.com/pt/">Gerar código QR</a></li>
+        <li><a href="https://deepai.org/machine-learning-model/colorizer">Colorização automática de imagens</a></li>
+        <li><a href="https://www.frontendmentor.io/">Exercícios de HTML5, CSS3 e JavaScript</a></li>
+        <li><a href="https://consultaprofissional.confea.org.br/">Consultar profissional do CREA/SP</a></li>
+        <li><a href="https://anuidade.creasp.org.br/">Anuidade do CREA/SP</a></li>
+        <li><a href="https://rasterbator.net/">Gerar poster gigante com folhas A4</a></li>
+        <li><a href="https://pfpmaker.com/">Gerar imagens de Perfil</a></li>
+        <li><a href="https://www.magiceraser.io/">Apagar partes de imagens automaticamente</a></li>
+        <li><a href="https://resoomer.com/pt/">Resumir partes importantes de textos automaticamente</a></li>
     </ul>
     <h2>Fontes:</h2>
     <ul>
@@ -48,12 +57,14 @@
         <li><a href="https://heyreliable.com/ultimate-google-font-pairings/" target="_blank">Reliable - Collection of Google Font Pairings</a></li>
         <li><a href="https://www.garett.co/21-google-fonts-combinations-for-websites-brands" target="_blank">Garett - Google Fonts Combinarions</a></li>
         <li><a href="https://www.pagecloud.com/blog/best-google-fonts-pairings" target="_blank">PageCloud - Top 50 Google Fonts Pairings</a></li>
+        <li><a href="https://www.myfonts.com/pages/whatthefont">Descobrir qual a fonte</a></li>
     </ul>
     <h2>Cores:</h2>
     <ul>
-        <li><a href="https://99designs.com.br/blog/tips/website-color-schemes/" target="_blank">11 Color Schemes</a></li>
-        <li><a href="https://visme.co/blog/website-color-schemes/" target="_blank">50 Color Schemes</a></li>
+        <li><a href="https://99designs.com.br/blog/tips/website-color-schemes/" target="_blank">11 esquemas de cores</a></li>
+        <li><a href="https://visme.co/blog/website-color-schemes/" target="_blank">50 esquemas de cores</a></li>
         <li><a href="https://coolors.co/" target="_blank">Gerador de paletas</a></li>
+        <li><a href="https://www.2quartos.com/roda-cores-complementares-como-usar-decoracao/">Roda de Cores Complementares</a></li>
     </ul>
     <h2>Ícones:</h2>
     <ul>
@@ -62,6 +73,7 @@
     <h2>Animações:</h2>
     <ul>
         <li><a href="https://animista.net/" target="_blank">Criar animações</a></li>
+        <li><a href="https://animate.style/">Animações animate.css</a></li>
     </ul>
     <h2>Background</h2>
     <ul>
