Adição de _blank para os links novos

--- a/index.html
+++ b/index.html
@@ -40,16 +40,16 @@
         <li><a href="https://www.4devs.com.br" target="_blank">4Devs</a></li>
         <li><a href="https://undesign.learn.uno/" target="_blank">Undesign - Coleção de ferramentas de todos os tipos</a></li>
         <li><a href="https://logoipsum.com/" target="_blank">Gerador de Logos</a></li>
-        <li><a href="https://www.qrcode-monkey.com/pt/">Gerar código QR</a></li>
-        <li><a href="https://deepai.org/machine-learning-model/colorizer">Colorização automática de imagens</a></li>
-        <li><a href="https://www.frontendmentor.io/">Exercícios de HTML5, CSS3 e JavaScript</a></li>
-        <li><a href="https://consultaprofissional.confea.org.br/">Consultar profissional do CREA/SP</a></li>
-        <li><a href="https://anuidade.creasp.org.br/">Anuidade do CREA/SP</a></li>
-        <li><a href="https://rasterbator.net/">Gerar poster gigante com folhas A4</a></li>
-        <li><a href="https://pfpmaker.com/">Gerar imagens de Perfil</a></li>
-        <li><a href="https://www.magiceraser.io/">Apagar partes de imagens automaticamente</a></li>
-        <li><a href="https://resoomer.com/pt/">Resumir partes importantes de textos automaticamente</a></li>
-        <li><a href="https://pt.savefrom.net/159/">Baixar videos de diversas fontes</a></li>
+        <li><a href="https://www.qrcode-monkey.com/pt/" target="_blank">Gerar código QR</a></li>
+        <li><a href="https://deepai.org/machine-learning-model/colorizer" target="_blank">Colorização automática de imagens</a></li>
+        <li><a href="https://www.frontendmentor.io/" target="_blank">Exercícios de HTML5, CSS3 e JavaScript</a></li>
+        <li><a href="https://consultaprofissional.confea.org.br/" target="_blank">Consultar profissional do CREA/SP</a></li>
+        <li><a href="https://anuidade.creasp.org.br/" target="_blank">Anuidade do CREA/SP</a></li>
+        <li><a href="https://rasterbator.net/" target="_blank">Gerar poster gigante com folhas A4</a></li>
+        <li><a href="https://pfpmaker.com/" target="_blank">Gerar imagens de Perfil</a></li>
+        <li><a href="https://www.magiceraser.io/" target="_blank">Apagar partes de imagens automaticamente</a></li>
+        <li><a href="https://resoomer.com/pt/" target="_blank">Resumir partes importantes de textos automaticamente</a></li>
+        <li><a href="https://pt.savefrom.net/159/" target="_blank">Baixar videos de diversas fontes</a></li>
     </ul>
     <h2>Fontes:</h2>
     <ul>
@@ -58,14 +58,14 @@
         <li><a href="https://heyreliable.com/ultimate-google-font-pairings/" target="_blank">Reliable - Collection of Google Font Pairings</a></li>
         <li><a href="https://www.garett.co/21-google-fonts-combinations-for-websites-brands" target="_blank">Garett - Google Fonts Combinarions</a></li>
         <li><a href="https://www.pagecloud.com/blog/best-google-fonts-pairings" target="_blank">PageCloud - Top 50 Google Fonts Pairings</a></li>
-        <li><a href="https://www.myfonts.com/pages/whatthefont">Descobrir qual a fonte</a></li>
+        <li><a href="https://www.myfonts.com/pages/whatthefont" target="_blank">Descobrir qual a fonte</a></li>
     </ul>
     <h2>Cores:</h2>
     <ul>
         <li><a href="https://99designs.com.br/blog/tips/website-color-schemes/" target="_blank">11 esquemas de cores</a></li>
         <li><a href="https://visme.co/blog/website-color-schemes/" target="_blank">50 esquemas de cores</a></li>
         <li><a href="https://coolors.co/" target="_blank">Gerador de paletas</a></li>
-        <li><a href="https://www.2quartos.com/roda-cores-complementares-como-usar-decoracao/">Roda de Cores Complementares</a></li>
+        <li><a href="https://www.2quartos.com/roda-cores-complementares-como-usar-decoracao/" target="_blank">Roda de Cores Complementares</a></li>
     </ul>
     <h2>Ícones:</h2>
     <ul>
