Adição do link para o W3Schools How to

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     <h2>Pesquisa e Consultas:</h2>
     <ul>
         <li><a href="https://www.w3schools.com" target="_blank">W3Schools</a></li>
+        <li><a href="https://www.w3schools.com/howto/default.asp" target="_blank">W3Schools - Como fazer HTML5 e CSS 3</a></li>
     </ul>
     <h2>Ferramentas</h2>
     <h3>Repositórios:</h3>
