correção das tags do projeto para tags SEMANTICAS e correção da padronização dos exercicios e projetos

--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="keywords" content="HTML5, CSS3, Links auxiliares">
-    <meta name="autor" content="Gabriel F. S. Filho, Gabriel Fernandes Seguro Filho">
+    <meta name="keywords" content="HTML5, CSS3">
+    <meta name="autor" content="Gabriel F. S. Filho, Gabriel Fernandes Seguro Filho, wd.gabrielfsfilho">
 
     <link rel="icon" type="image/png" sizes="32x32" href="./favicon-32x32.png">
 
@@ -20,80 +20,88 @@
     <link href="https://fonts.googleapis.com/css2?family=Crimson+Text:wght@400;700&family=Work+Sans:wght@300;400&display=swap" rel="stylesheet">
 </head>
 <body>
-    <h1>Ferramentas organizadas para Web Design</h1>
-    <br>
-    <h2>Pesquisa e Consultas:</h2>
-    <ul>
-        <li><a href="https://www.w3schools.com" target="_blank">W3Schools</a></li>
-        <li><a href="https://www.w3schools.com/howto/default.asp" target="_blank">W3Schools - Como fazer HTML5 e CSS 3</a></li>
-    </ul>
-    <h2>Ferramentas</h2>
-    <h3>Repositórios:</h3>
-    <ul>
-        <li><a href="https://github.com/wd-gabrielfsfilho?tab=repositories" target="_blank">GitHub</a></li>
-    </ul>
-    <h3>Conversão de CSS para adaptação em vários navegadores:</h3>
-    <ul>
-        <li><a href="https://autoprefixer.github.io/" target="_blank">Autoprefixer CSS online</a></li>
-    </ul>
-    <h3>Ferramentas diversas:</h3>
-    <ul>
-        <li><a href="https://www.4devs.com.br" target="_blank">4Devs</a></li>
-        <li><a href="https://undesign.learn.uno/" target="_blank">Undesign - Coleção de ferramentas de todos os tipos</a></li>
-        <li><a href="https://logoipsum.com/" target="_blank">Gerador de Logos</a></li>
-        <li><a href="https://www.qrcode-monkey.com/pt/" target="_blank">Gerar código QR</a></li>
-        <li><a href="https://deepai.org/machine-learning-model/colorizer" target="_blank">Colorização automática de imagens</a></li>
-        <li><a href="https://www.frontendmentor.io/" target="_blank">Exercícios de HTML5, CSS3 e JavaScript</a></li>
-        <li><a href="https://consultaprofissional.confea.org.br/" target="_blank">Consultar profissional do CREA/SP</a></li>
-        <li><a href="https://anuidade.creasp.org.br/" target="_blank">Anuidade do CREA/SP</a></li>
-        <li><a href="https://rasterbator.net/" target="_blank">Gerar poster gigante com folhas A4</a></li>
-        <li><a href="https://pfpmaker.com/" target="_blank">Gerar imagens de Perfil</a></li>
-        <li><a href="https://www.magiceraser.io/" target="_blank">Apagar partes de imagens automaticamente</a></li>
-        <li><a href="https://resoomer.com/pt/" target="_blank">Resumir partes importantes de textos automaticamente</a></li>
-        <li><a href="https://pt.savefrom.net/159/" target="_blank">Baixar videos de diversas fontes</a></li>
-    </ul>
-    <h2>Fontes:</h2>
-    <ul>
-        <li><a href="https://fonts.google.com/" target="_blank">Google Fonts</a></li>
-        <li><a href="https://artisanthemes.io/best-google-fonts-combinations-modern-agency-website/" target="_blank">Artisan Themes</a></li>
-        <li><a href="https://heyreliable.com/ultimate-google-font-pairings/" target="_blank">Reliable - Collection of Google Font Pairings</a></li>
-        <li><a href="https://www.garett.co/21-google-fonts-combinations-for-websites-brands" target="_blank">Garett - Google Fonts Combinarions</a></li>
-        <li><a href="https://www.pagecloud.com/blog/best-google-fonts-pairings" target="_blank">PageCloud - Top 50 Google Fonts Pairings</a></li>
-        <li><a href="https://www.myfonts.com/pages/whatthefont" target="_blank">Descobrir qual a fonte</a></li>
-    </ul>
-    <h2>Cores:</h2>
-    <ul>
-        <li><a href="https://99designs.com.br/blog/tips/website-color-schemes/" target="_blank">11 esquemas de cores</a></li>
-        <li><a href="https://visme.co/blog/website-color-schemes/" target="_blank">50 esquemas de cores</a></li>
-        <li><a href="https://coolors.co/" target="_blank">Gerador de paletas</a></li>
-        <li><a href="https://www.2quartos.com/roda-cores-complementares-como-usar-decoracao/" target="_blank">Roda de Cores Complementares</a></li>
-    </ul>
-    <h2>Ícones:</h2>
-    <ul>
-        <li><a href="https://icon-icons.com/pt/" target="_blank">Milhares de icones gratuitos SVG, PNG, ICO</a></li>
-    </ul>
-    <h2>Animações:</h2>
-    <ul>
-        <li><a href="https://animista.net/" target="_blank">Criar animações</a></li>
-        <li><a href="https://animate.style/">Animações animate.css</a></li>
-    </ul>
-    <h2>Background</h2>
-    <ul>
-        <li><a href="https://bgjar.com/" target="_blank">Criar backgrounds rapidamente</a></li>
-    </ul>
-    <h2>Sombras:</h2>
-    <ul>
-        <li><a href="https://neumorphism.io/#e0e0e0" target="_blank">Criar e trabalhar com sombras</a></li>
-    </ul>
-    <h2>Botões:</h2>
-    <ul>
-        <li><a href="https://css3buttongenerator.com/index.html" target="_blank">Gerar botões com facilidade</a></li>
-    </ul>
-    <h2>Leia-me</h2>
-    <ul>
-        <li><a href="https://readme.so/pt" target="_blank">Criar um arquivo README.md com facilidade</a></li>
-    </ul>
-    <h2>Exercícios:</h2>
-    <ul><li><a href="https://www.frontendmentor.io/home" target="_blank">Frontend Mentor</a></li></ul>
+    <header>
+        <section>
+            <h1>Ferramentas organizadas para Web Design</h1>
+        </section>
+    </header>
+    <section>
+        <main>
+            <h2>Pesquisa e Consultas:</h2>
+            <ul>
+                <li><a href="https://www.w3schools.com" target="_blank">W3Schools</a></li>
+                <li><a href="https://www.w3schools.com/howto/default.asp" target="_blank">W3Schools - Como fazer HTML5 e CSS 3</a></li>
+            </ul>
+            <h2>Ferramentas</h2>
+            <h3>Repositórios:</h3>
+            <ul>
+                <li><a href="https://github.com/wd-gabrielfsfilho?tab=repositories" target="_blank">GitHub</a></li>
+            </ul>
+            <h3>Conversão de CSS para adaptação em vários navegadores:</h3>
+            <ul>
+                <li><a href="https://autoprefixer.github.io/" target="_blank">Autoprefixer CSS online</a></li>
+            </ul>
+            <h3>Ferramentas diversas:</h3>
+            <ul>
+                <li><a href="https://www.4devs.com.br" target="_blank">4Devs</a></li>
+                <li><a href="https://undesign.learn.uno/" target="_blank">Undesign - Coleção de ferramentas de todos os tipos</a></li>
+                <li><a href="https://logoipsum.com/" target="_blank">Gerador de Logos</a></li>
+                <li><a href="https://www.qrcode-monkey.com/pt/" target="_blank">Gerar código QR</a></li>
+                <li><a href="https://deepai.org/machine-learning-model/colorizer" target="_blank">Colorização automática de imagens</a></li>
+                <li><a href="https://www.frontendmentor.io/" target="_blank">Exercícios de HTML5, CSS3 e JavaScript</a></li>
+                <li><a href="https://consultaprofissional.confea.org.br/" target="_blank">Consultar profissional do CREA/SP</a></li>
+                <li><a href="https://anuidade.creasp.org.br/" target="_blank">Anuidade do CREA/SP</a></li>
+                <li><a href="https://rasterbator.net/" target="_blank">Gerar poster gigante com folhas A4</a></li>
+                <li><a href="https://pfpmaker.com/" target="_blank">Gerar imagens de Perfil</a></li>
+                <li><a href="https://www.magiceraser.io/" target="_blank">Apagar partes de imagens automaticamente</a></li>
+                <li><a href="https://resoomer.com/pt/" target="_blank">Resumir partes importantes de textos automaticamente</a></li>
+                <li><a href="https://pt.savefrom.net/159/" target="_blank">Baixar videos de diversas fontes</a></li>
+            </ul>
+            <h2>Fontes:</h2>
+            <ul>
+                <li><a href="https://fonts.google.com/" target="_blank">Google Fonts</a></li>
+                <li><a href="https://artisanthemes.io/best-google-fonts-combinations-modern-agency-website/" target="_blank">Artisan Themes</a></li>
+                <li><a href="https://heyreliable.com/ultimate-google-font-pairings/" target="_blank">Reliable - Collection of Google Font Pairings</a></li>
+                <li><a href="https://www.garett.co/21-google-fonts-combinations-for-websites-brands" target="_blank">Garett - Google Fonts Combinarions</a></li>
+                <li><a href="https://www.pagecloud.com/blog/best-google-fonts-pairings" target="_blank">PageCloud - Top 50 Google Fonts Pairings</a></li>
+                <li><a href="https://www.myfonts.com/pages/whatthefont" target="_blank">Descobrir qual a fonte</a></li>
+            </ul>
+            <h2>Cores:</h2>
+            <ul>
+                <li><a href="https://99designs.com.br/blog/tips/website-color-schemes/" target="_blank">11 esquemas de cores</a></li>
+                <li><a href="https://visme.co/blog/website-color-schemes/" target="_blank">50 esquemas de cores</a></li>
+                <li><a href="https://coolors.co/" target="_blank">Gerador de paletas</a></li>
+                <li><a href="https://www.2quartos.com/roda-cores-complementares-como-usar-decoracao/" target="_blank">Roda de Cores Complementares</a></li>
+            </ul>
+            <h2>Ícones:</h2>
+            <ul>
+                <li><a href="https://icon-icons.com/pt/" target="_blank">Milhares de icones gratuitos SVG, PNG, ICO</a></li>
+            </ul>
+            <h2>Animações:</h2>
+            <ul>
+                <li><a href="https://animista.net/" target="_blank">Criar animações</a></li>
+                <li><a href="https://animate.style/">Animações animate.css</a></li>
+            </ul>
+            <h2>Background</h2>
+            <ul>
+                <li><a href="https://bgjar.com/" target="_blank">Criar backgrounds rapidamente</a></li>
+            </ul>
+            <h2>Sombras:</h2>
+            <ul>
+                <li><a href="https://neumorphism.io/#e0e0e0" target="_blank">Criar e trabalhar com sombras</a></li>
+            </ul>
+            <h2>Botões:</h2>
+            <ul>
+                <li><a href="https://css3buttongenerator.com/index.html" target="_blank">Gerar botões com facilidade</a></li>
+            </ul>
+            <h2>Leia-me</h2>
+            <ul>
+                <li><a href="https://readme.so/pt" target="_blank">Criar um arquivo README.md com facilidade</a></li>
+            </ul>
+            <h2>Exercícios:</h2>
+            <ul><li><a href="https://www.frontendmentor.io/home" target="_blank">Frontend Mentor</a></li></ul>
+
+        </main>
+    </section>
 </body>
 </html>
